# GeneticSnake

./: .gitignore  CMakeLists.txt  main.cpp  result1.txt
src/: Game.cpp  Game.hpp  SimpleActor.cpp  SimpleActor.hpp  Ui.cpp  Ui.hpp
